--- a/src/pages/buy-crypto/crypto-offers/crypto-offers.html
+++ b/src/pages/buy-crypto/crypto-offers/crypto-offers.html
@@ -69,11 +69,10 @@
         </div>
       </action-card-v4>
 
-      <!-- TODO -->
-      <p class="card-terms">
-        * fees included <br>
-        Lorem ipsum dolor sit amet, consectetur adipisici elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquid ex ea commodi consequat. Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-      </p>
+      <div class="card-terms">
+        <div translate>* fees included </div>
+        <div translate>Additional third-divarty fees may apply.</div>
+      </div>
     </ion-list>
   </div>
 </wide-header-page>
