simplex logo fixed

--- a/src/pages/buy-crypto/crypto-offers/crypto-offers.html
+++ b/src/pages/buy-crypto/crypto-offers/crypto-offers.html
@@ -71,7 +71,7 @@
 
       <div class="card-terms">
         <div translate>* fees included </div>
-        <div translate>Additional third-divarty fees may apply.</div>
+        <div translate>Additional third-party fees may apply.</div>
       </div>
     </ion-list>
   </div>
