--- a/src/pages/buy-crypto/crypto-payment-method/crypto-payment-method.html
+++ b/src/pages/buy-crypto/crypto-payment-method/crypto-payment-method.html
@@ -13,7 +13,7 @@
             <div class="secondary-label" translate>Supported by</div>
             <div>
               <img *ngIf="showExchange('simplex', method.value)" [src]="themeProvider.currentAppTheme !== 'dark' ? 'assets/img/simplex/logo-simplex-color.svg' : 'assets/img/simplex/logo-simplex-dm.png'">
-              <img *ngIf="showExchange('wyre', method.value)" [src]="themeProvider.currentAppTheme !== 'dark' ? 'assets/img/wyre/logo-wyre.svg' : 'assets/img/wyre/logo-wyre-dm.svg'" [ngClass]="themeProvider.currentAppTheme !== 'dark' ? '' : 'filter'">
+              <img *ngIf="showExchange('wyre', method.value)" [src]="themeProvider.currentAppTheme !== 'dark' ? 'assets/img/wyre/logo-wyre.svg' : 'assets/img/wyre/logo-wyre-dm.svg'">
             </div>
           </ion-label>
           <ion-radio item-left value="{{method?.key}}" checked="methodSelected"></ion-radio>
