--- a/src/pages/integrations/simplex/simplex.html
+++ b/src/pages/integrations/simplex/simplex.html
@@ -2,7 +2,7 @@
   <ion-navbar>
     <ion-title class="bp-title">
       <div [reveal-at-scroll-pos]="expandableHeader.headerHeight" [scrollArea]="scrollArea">
-        <img width="110" src="assets/img/simplex/logo-simplex-color.svg" alt="Simplex" class="simplex-logo">
+        <img width="110" [src]="themeProvider.currentAppTheme !== 'dark' ? 'assets/img/simplex/logo-simplex-color.svg' : 'assets/img/simplex/logo-simplex-dm.png'" alt="Simplex" class="simplex-logo">
       </div>
     </ion-title>
     <ng-content select="[right]"></ng-content>
@@ -15,7 +15,7 @@
       <ion-toolbar class="wide-header__title">
         <div>
           <expandable-header-primary>
-            <img margin-left width="130" src="assets/img/simplex/logo-simplex-color.svg" alt="Simplex">
+            <img margin-left width="130" [src]="themeProvider.currentAppTheme !== 'dark' ? 'assets/img/simplex/logo-simplex-color.svg' : 'assets/img/simplex/logo-simplex-dm.png'" alt="Simplex">
           </expandable-header-primary>
         </div>
       </ion-toolbar>
