--- a/src/pages/integrations/wyre/wyre-details/wyre-details.html
+++ b/src/pages/integrations/wyre/wyre-details/wyre-details.html
@@ -18,7 +18,7 @@
     </div>
 
     <div class="subtitle-modal">
-      <img class="icon-service" src="assets/img/wyre/logo-wyre.svg" alt="Wyre" width="40">
+      <img class="icon-service" [src]="themeProvider.currentAppTheme !== 'dark' ? 'assets/img/wyre/logo-wyre.svg' : 'assets/img/wyre/logo-wyre-dm.svg'" alt="Wyre" width="40">
       {{ paymentRequest.destAmount | number:'1.0-6'}}
       <span class="amount-unit">{{ paymentRequest.destCurrency }}</span>
     </div>
